--- a/CarRental/src/main/resources/templates/admin-vehicles.html
+++ b/CarRental/src/main/resources/templates/admin-vehicles.html
@@ -17,7 +17,7 @@
             <div style="flex-grow: 1;"></div>
 
             <div class="admin-profile" onclick="toggleProfileMenu(event)">
-                <img th:src="@{/images/admin-avatar.png}" alt="Admin">
+                <img th:src="@{/images/admin.png}" alt="Admin">
                 <span>Admin</span>
                 <i class="fas fa-chevron-down" style="font-size: 12px; margin-left: 8px; color: #777;"></i>
 
