--- a/CarRental/src/main/resources/templates/login.html
+++ b/CarRental/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
     <div class="right-panel">
         <div class="auth-form-wrapper">
             <div class="auth-header">
-                <h2>Chào mừng trở lại!</h2>
+                <h2>Đăng Nhập</h2>
                 <p>Vui lòng nhập thông tin đăng nhập của bạn.</p>
             </div>
 
