--- a/CarRental/src/main/resources/templates/admin-staff.html
+++ b/CarRental/src/main/resources/templates/admin-staff.html
@@ -16,7 +16,7 @@
             <div class="search-bar"></div>
 
             <div class="admin-profile" onclick="toggleProfileMenu(event)">
-                <img th:src="@{/images/admin-avatar.png}" alt="Admin">
+                <img th:src="@{/images/admin.png}" alt="Admin">
                 <span>Admin</span>
                 <i class="fas fa-chevron-down" style="font-size: 12px; margin-left: 8px; color: #777;"></i>
 
