--- a/CarRental/src/main/resources/templates/fragments/admin-nav.html
+++ b/CarRental/src/main/resources/templates/fragments/admin-nav.html
@@ -20,6 +20,9 @@
         <li><a th:href="@{/admin/vehicle-reports}"
                th:class="${activePage == 'vehicle-reports'} ? 'active'">Tình trạng xe</a></li>
 
+        <li><a th:href="@{/admin/ratings}"
+               th:class="${activePage == 'ratings'} ? 'active'">Đánh giá</a></li>
+
         <li><a th:href="@{/admin/customers}"
                th:class="${activePage == 'customers'} ? 'active'">Khách hàng</a></li>
 
